// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ad-container header ad 1`] = `
<View
  id="header"
>
  <div
    id="ad-header"
  />
</View>
`;

exports[`ad-container inline ad 1`] = `
<View
  id="inline-ad"
>
  <div
    id="ad-article-inline"
  />
</View>
`;

exports[`ad-container pixel ad 1`] = `
<View
  id="pixel"
>
  <div
    id="ad-pixel"
  />
</View>
`;

exports[`ad-container pixelskin ad 1`] = `
<View
  id="pixelskin"
>
  <div
    id="ad-pixelskin"
  />
</View>
`;

exports[`ad-container pixelteads ad 1`] = `
<View
  id="pixelteads"
>
  <div
    id="ad-pixelteads"
  />
</View>
`;
